# sbr

./: .gitignore  CMakeLists.txt  sbr.sln  sbr.vcxproj  selftest.bat  visualize.py
app/: main.cpp
demo/: sbr_config_412.json  sbr_config_grid.json  sbr_config_meeting.json
demo/Material/: ItuMaterial.csv  material_map-412.json  material_map-meeting.json
document/: Q1.txt  Q2.txt  UTD.md  sbr开发手册.md  sbr开发手册v2.md  大规模Rx架构方案.md  对比.md
include/sbr/: sbr_accelerator.h  sbr_accelerator_bruteforce.h  sbr_bvh_accelerator.h  sbr_config.h  sbr_diagnostics.h  sbr_diffraction.h  sbr_engine.h  sbr_interaction.h  sbr_material.h  sbr_math.h  sbr_path.h  sbr_postprocess.h  sbr_pruner.h  sbr_ray_emitter.h  sbr_rx_detector.h  sbr_scene.h  sbr_scene_builder.h  sbr_scene_loader.h  sbr_types.h  sbr_wavefront.h
src/: sbr_accelerator_bruteforce.cpp  sbr_bvh_accelerator.cpp  sbr_engine.cpp  sbr_material.cpp  sbr_ray_emitter.cpp  sbr_scene_builder.cpp  sbr_scene_loader.cpp
test/: benchmark_perf.cpp  smoke_diffraction.cpp  smoke_los.cpp  smoke_pec_reflection.cpp  smoke_postprocess.cpp  smoke_transmission.cpp  test_bruteforce.cpp  test_bvh_quick.cpp  test_main.cpp  test_math.cpp  test_scene_builder.cpp  test_type_compat.cpp
